# maestro

./: .env.example  .gitignore  README.md
.claude/: settings.json
.claude/agents/: README.md
.claude/agents/oneonone/: AGENT.md
.claude/agents/people/: AGENT.md
.claude/commands/: README.md
.claude/skills/: README.md
.claude/skills/oneonone-add-topic/: SKILL.md
.claude/skills/oneonone-analyze-transcript/: SKILL.md
.claude/skills/oneonone-close-collection/: SKILL.md
.claude/skills/oneonone-collect-topics/: SKILL.md
.claude/skills/oneonone-ingest-dms/: SKILL.md
.claude/skills/oneonone-new-session/: SKILL.md
.claude/skills/oneonone-prepare/: SKILL.md
.claude/skills/oneonone-show/: SKILL.md
.claude/skills/oneonone-sync-calendar/: SKILL.md
.claude/skills/people-add/: SKILL.md
.claude/skills/people-cancel/: SKILL.md
.claude/skills/ping/: SKILL.md
backend/: pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: a3b7c9d2e4f1_create_oneonone_tables.py  f8129533384f_create_people_tables.py
backend/app/: config.py  db.py  logging.py  main.py
backend/app/models/: __init__.py  oneonone.py  person.py
backend/app/routers/: health.py  oneonone.py  people.py  skills.py
backend/app/schemas/: __init__.py  oneonone.py  person.py
backend/app/services/: agent_runner.py  claude_cli.py  skill_runner.py
backend/tests/: conftest.py  test_health.py  test_oneonone.py  test_people.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
(+90 files in other folders)
